cnkb code clean-up