@@ -1,255 +1,117 @@
 package gov.nih.nci.ctd2.dashboard.util.cnkb;
 
 import java.io.BufferedReader;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.math.BigDecimal; 
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.util.Properties;
 import java.util.TreeMap;
 
-import javax.xml.bind.DatatypeConverter;
-
- 
 public class ResultSetlUtil {
+    private static final String REGEX_DEL = "\\|";
+    private static final int SPLIT_ALL = -2;
+    private static final String NULL_STR = "null";
 
-	public static final String DEL = "|";
+    private static String INTERACTIONS_SERVLET_URL = null;
 
-	public static final String REGEX_DEL = "\\|";
+    private final static int urlConnectionTimeout = 3000;
 
-	public static final int SPLIT_ALL = -2;
-	public static final String NULL_STR = "null";
-	public static final BigDecimal NULL_BIGDECIMAL = new BigDecimal(0);
+    private final TreeMap<String, Integer> metaMap;
+    private String[] row;
+    private String decodedString;
+    private final BufferedReader in;
 
-	private static String INTERACTIONS_SERVLET_URL = null;
-	 
-	private static int urlConnectionTimeout = 3000;
+    public ResultSetlUtil(final BufferedReader in) throws IOException {
+        this.in = in;
+        metaMap = new TreeMap<String, Integer>();
 
-	private TreeMap<String, Integer> metaMap;
-	private String[] row;
-	private String decodedString;
-	private BufferedReader in;
+        // metadata
+        next();
 
-	public ResultSetlUtil(BufferedReader in) throws IOException {
-		this.in = in;
-		metaMap = new TreeMap<String, Integer>();
+        if (row == null)
+            return;
+        for (int i = 0; i < row.length; i++) {
+            metaMap.put(row[i], new Integer(i + 1));
+        }
+    }
 
-		// metadata
-		next();
+    public static void setUrl(final String aUrl) {
+        INTERACTIONS_SERVLET_URL = aUrl;
+    }
 
-		processMetadata();
-	}
+    private int getColumNum(final String name) {
+        final Integer ret = metaMap.get(name);
+        if (ret != null)
+            return ret.intValue();
+        else
+            return -1;
+    }
 
-	public static void setUrl(String aUrl) {
-		INTERACTIONS_SERVLET_URL = aUrl;
-	}
+    public double getDouble(final String colmName) {
+        final int columNum = getColumNum(colmName);
 
-	public static String getUrl() {
-		return INTERACTIONS_SERVLET_URL;
-	}
+        double ret = 0;
 
-	public static void setTimeout(int timeout) {
-		urlConnectionTimeout = timeout;
-	}
+        final String tmp = row[columNum - 1].trim();
 
-	// reconstruct metadata
-	public void processMetadata() {
-		if (row == null)
-			return;
-		for (int i = 0; i < row.length; i++) {
-			metaMap.put(row[i], new Integer(i + 1));
-		}
-		return;
-	}
+        if (!tmp.equals(NULL_STR)) {
+            ret = Double.valueOf(tmp).doubleValue();
+        }
 
-	public int getColumNum(String name) {
-		Integer ret = metaMap.get(name);
-		if (ret != null)
-			return ret.intValue();
-		else
-			return -1;
-	}
+        return ret;
+    }
 
-	public double getDouble(String colmName) {
-		int columNum = getColumNum(colmName);
+    public String getString(final String colmName) {
+        final int coluNum = getColumNum(colmName);
+        if (coluNum == -1)
+            return null;
+        return row[coluNum - 1];
+    }
 
-		return getDouble(columNum);
-	}
+    public boolean next() throws IOException {
+        boolean ret = false;
+        decodedString = in.readLine();
 
-	public double getDouble(int colmNum) {
-		double ret = 0;
+        if (decodedString != null && !decodedString.trim().equals("")) {
+            row = decodedString.split(REGEX_DEL, SPLIT_ALL);
+            ret = true;
+        }
 
-		String tmp = getString(colmNum).trim();
+        return ret;
+    }
 
-		if (!tmp.equals(NULL_STR)) {
-			ret = Double.valueOf(tmp).doubleValue();
-		}
+    public void close() throws IOException {
+        in.close();
+    }
 
-		return ret;
-	}
+    public static ResultSetlUtil executeQuery(final String methodAndParams)
+            throws IOException, UnAuthenticatedException {
 
-	public BigDecimal getBigDecimal(String colmName) {
-		int columNum = getColumNum(colmName);
-		return getBigDecimal(columNum);
-	}
+        final URL aURL = new URL(INTERACTIONS_SERVLET_URL);
+        final HttpURLConnection aConnection = (HttpURLConnection) (aURL.openConnection());
+        aConnection.setDoOutput(true);
+        aConnection.setConnectTimeout(urlConnectionTimeout);
 
-	public BigDecimal getBigDecimal(int colmNum) {
-		BigDecimal ret = NULL_BIGDECIMAL;
+        final OutputStreamWriter out = new OutputStreamWriter(aConnection.getOutputStream());
 
-		String tmp = getString(colmNum).trim();
-		if (!tmp.equals(NULL_STR)) {
-			ret = new BigDecimal(tmp);
-		}
+        out.write(methodAndParams);
+        out.close();
 
-		return ret;
-	}
+        // errors, exceptions
+        final int respCode = aConnection.getResponseCode();
 
-	public String getString(String colmName) {
-		int coluNum = getColumNum(colmName);
-		if (coluNum == -1)
-			return null;
-		return getString(coluNum);
-		 
-	}
+        if (respCode == HttpURLConnection.HTTP_UNAUTHORIZED)
+            throw new UnAuthenticatedException("server response code = " + respCode);
 
-	public String getString(int colmNum) {
-		// get from row
-		return row[colmNum - 1];
-	}
+        if ((respCode == HttpURLConnection.HTTP_BAD_REQUEST) || (respCode == HttpURLConnection.HTTP_INTERNAL_ERROR)) {
+            throw new IOException("server response code = " + respCode + ", see server logs");
+        }
 
-	public boolean next() throws IOException {
-		boolean ret = false;
-		decodedString = in.readLine();
+        final BufferedReader in = new BufferedReader(new InputStreamReader(aConnection.getInputStream()));
 
-		if (decodedString != null && !decodedString.trim().equals("")) { 
-			row = decodedString.split(REGEX_DEL, SPLIT_ALL);
-			ret = true;
-		}
+        final ResultSetlUtil rs = new ResultSetlUtil(in);
 
-		return ret;
-	}
-
-	public void close() throws IOException {
-		in.close();
-	}
-
-	public static HttpURLConnection getConnection(String url)
-			throws IOException {
-		URL aURL = new URL(url);
-		HttpURLConnection aConnection = (HttpURLConnection) (aURL
-				.openConnection());
-		aConnection.setDoOutput(true);
-		aConnection.setConnectTimeout(urlConnectionTimeout);
-		return aConnection;
-	}
-	
-	public static ResultSetlUtil executeQuery(String methodAndParams,
-			String urlStr) throws IOException, UnAuthenticatedException {
-	
-		    return executeQueryWithUserInfo(methodAndParams, urlStr, null);
-	}
-
-	public static ResultSetlUtil executeQueryWithUserInfo(String methodAndParams,
-			String urlStr, String userInfo) throws IOException, UnAuthenticatedException {
-
-		HttpURLConnection aConnection = getConnection(urlStr);
-
-		if (userInfo != null && userInfo.trim().length() != 0)
-		{			
-			aConnection.setRequestProperty("Authorization",
-			                            "Basic " + DatatypeConverter.printBase64Binary(userInfo.getBytes()));			
-		 
-		}
-		OutputStreamWriter out = new OutputStreamWriter(
-				aConnection.getOutputStream());
-
-		out.write(methodAndParams);
-		out.close();
-
-		// errors, exceptions
-
-		int respCode = aConnection.getResponseCode();
-
-		if (respCode == HttpURLConnection.HTTP_UNAUTHORIZED)
-			throw new UnAuthenticatedException("server response code = "
-					+ respCode);
-
-		if ((respCode == HttpURLConnection.HTTP_BAD_REQUEST)
-				|| (respCode == HttpURLConnection.HTTP_INTERNAL_ERROR)) {
-			throw new IOException("server response code = " + respCode
-					+ ", see server logs");
-		}
-
-		BufferedReader in = new BufferedReader(new InputStreamReader(
-				aConnection.getInputStream()));
-
-		ResultSetlUtil rs = new ResultSetlUtil(in);
-
-		return rs;
-	}
-	
-	
-	
-	
-
-	// test
-	public static void main(String[] args) {
-
-		ResultSetlUtil rs = null;
-		try {
-			Properties iteractionsProp = new Properties();
-			iteractionsProp.load(new FileInputStream(
-					"conf/application.properties"));
-			String interactionsServletUrl = iteractionsProp
-					.getProperty("interactions_servlet_url");
-			interactionsServletUrl = "http://localhost:8080/InteractionsServlet/InteractionsServlet";
-			ResultSetlUtil.setUrl(interactionsServletUrl);
-		 
-
-			String aSQL = "getInteractionsByEntrezIdOrGeneSymbol" + DEL + "165" + DEL + "BCi"
-					+ DEL + "1.0";
-			int i = 165;
-
-			aSQL = "getInteractionsByEntrezIdOrGeneSymbol" + DEL + i + DEL +"geneName"+ DEL +  "HGi_Sun" + DEL
-					+ "1.0";
-
-			rs = ResultSetlUtil.executeQuery(aSQL, INTERACTIONS_SERVLET_URL);
-
-			while (rs.next()) {
-
-				BigDecimal msid1 = rs.getBigDecimal("ms_id1");
-				System.out.println("msid1 = " + msid1);
-
-				BigDecimal msid2 = rs.getBigDecimal("ms_id2");
-				System.out.println("msid2 = " + msid2);
-
-				BigDecimal confidenceValue = rs
-						.getBigDecimal("confidence_value");
-				// double confidenceValue = rs.getDouble("confidence_value");
-				System.out.println("confidence_value = " + confidenceValue);
-
-				String interactionType = rs.getString("interaction_type");
-				System.out.println("name = " + interactionType);
-			}
-
-		} catch (IOException ie) {
-			ie.printStackTrace();
-		} catch (Exception e) {
-			e.printStackTrace();
-		} finally {
-			if (rs != null) {
-				try {
-					rs.close();
-
-				} catch (Exception e) {
-				}
-
-			}
-			System.exit(0);
-		}
-	}
-
+        return rs;
+    }
 }
